--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,15 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
+<!-- properties of the class -->
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 	</properties>
+
+<!-- dependency of the project-->
 
 	<dependencies>
 		<dependency>
