--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,11 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.0.3.RELEASE</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<relativePath /> 
+         <!-- lookup parent from repository -->
 	</parent>
 
-<!-- properties of the class -->
+<!-- properties of the class - i am properties dont change me->
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
